--- a/styles.css
+++ b/styles.css
@@ -73,10 +73,13 @@ section {
 h1,
 h2,
 h3,
-h4,
-p {
+h4 {
     font-family: "Playfair Display", 'Times New Roman', Times, serif;
     margin: 0;
+}
+
+p {
+    font-family: Baskerville, "Baskerville Old Face", "Hoefler Text", Garamond, "Times New Roman", serif;
 }
 
 h1 {
@@ -123,7 +126,10 @@ p {
 }
 
 .item {
-    width: 28%;
+    width: 33%;
+}
+
+.item-content-wrapper {
     height: 40vw;
     display: flex;
     margin: 5vw 2vw;
@@ -135,9 +141,7 @@ p {
 
 .item-number {
     position: relative;
-    margin-right: 5vw;
-    width: 20%;
-    line-height: normal;
+    margin-right: 90px;
 }
 
 .item-number h1 {
@@ -148,12 +152,10 @@ p {
 
 .image-and-title {
     margin-right: 30px;
-    width: 80%;
     padding-top: 0px;
 }
 
 .img-hover-zoom {
-    height: 70%;
     /* [1.1] Set it as per your need */
     overflow: hidden;
     /* [1.2] Hide the overflowing of child elements */
@@ -182,7 +184,7 @@ p {
 }
 
 .footer {
-    margin: 2rem;
+    margin: 2rem 3rem .5rem;
     text-transform: uppercase;
     height: 3vmax;
 }
@@ -230,7 +232,7 @@ a::before {
     transition: transform .3s ease;
 } */
 
-.page-body {
+.page-content {
     margin: 50px 100px;
 }
 
@@ -249,13 +251,48 @@ a::before {
 
 .project-subhead {
     text-transform: uppercase;
+    margin-top: 0;
+    font-size: 16px !important;
+    color: rgb(99, 99, 99);
+    letter-spacing: .1rem;
+    font-family: "Playfair display"
 }
 
 .project-heading {
     margin-top: 0;
 }
 
-.project-introduction {
-    width: 60%;
-    margin: 100px auto;
+.page-body {
+    margin-left: 22vw;
+}
+
+.project-section {
+    margin-top: 150px;
+}
+
+.image-wrapper {
+    display: flex;
+    width: 100%;
+    margin-top: 50px;
+}
+
+img {
+    max-width: 100%;
+    max-height: 100%;
+}
+
+.page-body p {
+    width: 100%;
+    font-size: 26px;
+}
+
+.back-text {
+    font-size: 20px;
+    margin-left: 10px;
+    text-transform: uppercase;
+    display: inline;
+}
+
+.project-end {
+    margin: 200px 0 40px 0;
 }
