--- a/styles.css
+++ b/styles.css
@@ -111,7 +111,6 @@ body#main-scrollbar {
 
 p {
   margin: 0;
-  padding: 50px 0 50px 50px;
 }
 
 section {
@@ -244,6 +243,29 @@ color:var(--light-gray);}
   display: inline;
 }
 
+.resume{
+  position:relative;
+  margin:0;
+  padding:10px;
+}
+.resume::before{
+  transform: scaleX(0);
+  transform-origin: bottom right;
+  content: " ";
+  display: block;
+  position: absolute;
+  top: 0; right: 0; bottom: 0; left: 0;
+  inset: 0 0 0 0;
+  background:#FCD804;
+  z-index: -1;
+  transition: transform .3s ease;
+}
+.resume:hover::before{
+  transform: scaleX(1);
+  transform-origin: bottom left;
+}
+
+
 .footer-right {
   float: right;
   display: inline;
@@ -271,7 +293,7 @@ color:var(--light-gray);}
   text-transform: uppercase;
   margin-top: 0;
   font-size: 16px !important;
-  color: rgb(99, 99, 99);
+  color: var(--light-gray);
   letter-spacing: 0.1rem;
   font-family: "Playfair display";
 }
