--- a/styles.css
+++ b/styles.css
@@ -243,12 +243,12 @@ color:var(--light-gray);}
   display: inline;
 }
 
-.resume{
+.highlight-text{
   position:relative;
   margin:0;
   padding:10px;
 }
-.resume::before{
+.highlight-text::before{
   transform: scaleX(0);
   transform-origin: bottom right;
   content: " ";
@@ -260,7 +260,7 @@ color:var(--light-gray);}
   z-index: -1;
   transition: transform .3s ease;
 }
-.resume:hover::before{
+.highlight-text:hover::before{
   transform: scaleX(1);
   transform-origin: bottom left;
 }
